--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "description": "",
   "keywords": [],
-  "main": "dist/index.umd.js",
-  "module": "dist/index.es5.js",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "browser": "dist/index.umd.js",
   "typings": "dist/types/index.d.ts",
   "files": [
     "dist"
@@ -34,17 +35,22 @@
     "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
     "precommit": "lint-staged",
     "travis-deploy-once": "travis-deploy-once",
-    "predeploy": "npm run compile && npm run copy-to-dist",
-    "deploy": "gh-pages -b dist -d lib"
+    "copy-to-dist": "bash ./tools/copy-to-dist.sh",
+    "predeploy": "npm run build && npm run copy-to-dist",
+    "deploy": "gh-pages -b dist -d dist"
   },
   "lint-staged": {
-    "{src,test}/**/*.ts": [
+    "{src|test}/**/*.ts": [
       "npm run lint:fix",
       "git add"
     ]
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^7.1.2",
+    "@rollup/plugin-commonjs": "^11.0.1",
+    "@rollup/plugin-json": "^4.0.1",
+    "@rollup/plugin-node-resolve": "^6.1.0",
+    "@rollup/plugin-typescript": "^2.0.2",
     "@types/jest": "^23.3.2",
     "@types/node": "^10.11.0",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
@@ -58,6 +64,7 @@
     "eslint-plugin-jest": "^23.3.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.17.0",
+    "gh-pages": "^2.1.1",
     "husky": "^1.0.1",
     "jest": "^24.9.0",
     "jest-config": "^23.6.0",
@@ -67,17 +74,14 @@
     "prompt": "^1.0.0",
     "replace-in-file": "^3.4.2",
     "rimraf": "^2.6.2",
-    "rollup": "^0.67.0",
-    "rollup-plugin-commonjs": "^9.1.8",
-    "rollup-plugin-json": "^3.1.0",
-    "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.18.0",
+    "rollup": "^1.28.0",
+    "rollup-plugin-sourcemaps": "^0.5.0",
     "semantic-release": "^15.9.16",
     "shelljs": "^0.8.3",
     "travis-deploy-once": "^5.0.9",
     "ts-jest": "^24.2.0",
     "ts-node": "^7.0.1",
+    "tslib": "^1.10.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-config-standard": "^8.0.1",
