--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "keywords": [],
   "main": "dist/index.umd.js",
-  "module": "dist/index.es5.js",
+  "module": "dist/index.cjs.js",
   "typings": "dist/types/index.d.ts",
   "files": [
     "dist"
@@ -46,6 +46,10 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^7.1.2",
+    "@rollup/plugin-commonjs": "^11.0.1",
+    "@rollup/plugin-json": "^4.0.1",
+    "@rollup/plugin-node-resolve": "^6.1.0",
+    "@rollup/plugin-typescript": "^2.0.2",
     "@types/jest": "^23.3.2",
     "@types/node": "^10.11.0",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
@@ -69,17 +73,14 @@
     "prompt": "^1.0.0",
     "replace-in-file": "^3.4.2",
     "rimraf": "^2.6.2",
-    "rollup": "^0.67.0",
-    "rollup-plugin-commonjs": "^9.1.8",
-    "rollup-plugin-json": "^3.1.0",
-    "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.18.0",
+    "rollup": "^1.28.0",
+    "rollup-plugin-sourcemaps": "^0.5.0",
     "semantic-release": "^15.9.16",
     "shelljs": "^0.8.3",
     "travis-deploy-once": "^5.0.9",
     "ts-jest": "^24.2.0",
     "ts-node": "^7.0.1",
+    "tslib": "^1.10.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-config-standard": "^8.0.1",
